BA-725 // prevent "Update my proposal" link from being split across two lines
- add a new class of "update-proposal-link"
- wrap link inside a div with this class so the object gets treated as a whole and will be pushed onto a new line if it gets too wide

--- a/modules/proposals/client/css/proposals.css
+++ b/modules/proposals/client/css/proposals.css
@@ -28,3 +28,6 @@
 .btn-remove-attachment:hover {
 	cursor: pointer;
 }
+.update-proposal-link {
+	display: inline-block;
+}
